--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "queue": "cpp"
+        "queue": "cpp",
+        "array": "c",
+        "deque": "c",
+        "string": "c",
+        "string_view": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "*.tpp": "c"
     }
 }
